@@ -3,6 +3,7 @@ KeepassDX (2.5.0.0beta8)
  * Best management of field references (https://keepass.info/help/base/fieldrefs.html)
  * Change database / default settings
  * Add Autofill for search
+ * Add sorting by last access and by creation time
  * Rebuild custom entries
  * Refactor old code
  * Fix bugs
